# JongSnamFootball.Entities/Dtos/UserDto.cs
@@ -11,5 +11,6 @@
         public string Image { get; set; }
         public string UserType { get; set; }
         public bool IsLoggedIn { get; set; }
+        public string Password { get; set; }
     }
 }
